--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
 
     <script src="./app.js"></script>
     <script src="./myprompt.js"></script>
+    <script src="./utils.js"></script>
 </body>
 </html>
